# fetch

./: BUILD.md  CMakeLists.txt  README.md  vcpkg.json
cli/: fetch.cpp
cmake/: fetch-config.cmake.in
include/fetch/: client.hpp  error.hpp  fetch.hpp  request.hpp  response.hpp
include/fetch/detail/: http.hpp  socket.hpp  tls.hpp  url.hpp
ports/fetch/: portfile.cmake  vcpkg.json
src/: client.cpp  http.cpp  socket.cpp  tls.cpp  url.cpp
tests/: main.cpp
versions/: baseline.json
versions/f-/: fetch.json
